# sustainability-audit-testing

./: .dockerignore  .gitignore  00-TEST-REFERENCE-INTAKE.py  01-RAG-Evaluation.ipynb  API-SIMPLE.py  Docker  DockerFile  Dockerfile  FEATURES.md  README.md  TRIAL-API.py  VISUALIZE_VECTORSTORE.py  main.py  old-api.py  pyproject.toml  requirements.txt  vectorstore_debug.ipynb
accompanying_assistant/: chatbot_pipeline.py
config/: accompanying_chatbot_config.yaml  ingestion_master_config.yaml  qa_and_report_master_config.yaml  retrieval_master_config.yaml
qa_and_report_generation/: batched_question.jsonl  report_formatting.py  report_generation_pipeline.py  responses_postprocessing.py  retrieval_and_qa.py
retrieval_and_postprocessing/: llm_reranking_and_query_processing.py  retrieval_full_pipeline.py  retrieval_functions.py
retrieval_and_response_eval/: response_eval.py  retrieval_eval.py  test.py  tests.jsonl
utils/: exception.py  logger.py  read_yaml.py  security_gate.py
vectorstore_ingestion/: chunk_preprocessing.py  full_ingestion_pipeline.py  report_data_extraction.py  vectorstore_creation_functions.py
vectorstore_visualization/: pca_visualization.py  tsne_visualization.py
